--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-      "outDir": "../../out-tsc/renderer",
-      "baseUrl": "./",
-      "module": "es2015",
-      "types": []
+        "outDir": "../../dist/main",
+        "baseUrl": "./",
+        "module": "es2015",
+        "types": []
     },
     "exclude": [
-      "test.ts",
-      "**/*.spec.ts"
+        "test.ts",
+        "**/*.spec.ts"
     ]
-  }
+}
