--- a/src/renderer/tsconfig.spec.json
+++ b/src/renderer/tsconfig.spec.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/main/spec",
+    "outDir": "../../out-tsc/renderer/spec",
     "baseUrl": "./",
     "module": "commonjs",
     "target": "es5",
