--- a/src/main/tsconfig.json
+++ b/src/main/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "outDir": "../../dist/main",
+        "outDir": "../../dist/bundle/main",
         "baseUrl": "./",
         "module": "commonjs",
         "types": []
